Blender crashes when trying to use cycles experimental displacement #44908

Closed
opened 2015-05-31 21:36:19 +02:00 by gandalf3 · 7 comments
Member

System Information
Archlinux
GTX 460

Blender Version
Broken: latest master (000dfc0)
Worked: 2.74 release

Short description of error
Blender crashes when trying to render a cycles displacement scene with both viewport render and final render.
In 2.74 blender renders the scene correctly in viewport render, but doesn't take displacement into account in final render.

Exact steps for others to reproduce the error

  1. Open procedural_moon.blend
  2. Render.
**System Information** Archlinux GTX 460 **Blender Version** Broken: latest master (000dfc0) Worked: 2.74 release **Short description of error** Blender crashes when trying to render a cycles displacement scene with both viewport render and final render. In 2.74 blender renders the scene correctly in viewport render, but doesn't take displacement into account in final render. **Exact steps for others to reproduce the error** 1. Open [procedural_moon.blend](https://archive.blender.org/developer/F182504/procedural_moon.blend) 2. Render.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3

Added subscriber: @mib2berlin

Added subscriber: @mib2berlin

Hi, can verify.

Blender a8d6c69

Opensuse 13.2/64
Intel i5 3770K
GTX 760 4 GB
Driver 352.09

Cheers, mib

Hi, can verify. Blender a8d6c69 Opensuse 13.2/64 Intel i5 3770K GTX 760 4 GB Driver 352.09 Cheers, mib
Sergey Sharybin was assigned by Campbell Barton 2015-06-01 06:55:50 +02:00

This issue was referenced by 27c1262e21

This issue was referenced by 27c1262e21070d8f4dc63d739b41b205f60e3318

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@45d622bb33

This issue was referenced by blender/cycles@45d622bb3381c6e5816ab1b359e9a2c6631ecddf
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44908
No description provided.